[project]
name = "transformers-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers[ja,sentencepiece,torch]>=4.46.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "lefthook>=1.8.2",
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]
